test: deploy from support-mdbook

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,7 @@ name: Build and deploy GH Pages
 on: 
  push:
   branches:
-   - main
+   - support-mdbook
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
           touch ./book/.nojekyll
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/support-mdbook' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./book
